        - Fix find() without a key attr. choosing constraints even if
          some of the supplied values are NULL (RT#59219)
        - Fixed rels ending with me breaking subqueried limit realiasing
        - Fixed $rs->update/delete on resutsets constrained by an
          -or condition
        - Remove rogue GROUP BY on non-multiplying prefetch-induced
          subqueries
        - Oracle sequence detection now *really* works across schemas
          (fixed some ommissions from 0.08123)
        - dbicadmin now uses a /usr/bin/env shebang to work better with
          perlbrew and other local perl builds
        - bulk-inserts via $dbh->bind_array (void $rs->populate) now
          display properly in DBIC_TRACE
        - Incomplete exception thrown on relationship auto-fk-inference
          failures
        - Fixed distinct with order_by to not double-specify the same
          column in the GROUP BY clause
        - Properly support column names with symbols (e.g. single quote)
          via custom accessors
        - Fixed ::Schema::Versioned to work properly with quoting on
          (RT#59619)
        - Fixed t/54taint fails under local-lib
        - Fixed SELECT ... FOR UPDATE with LIMIT regression (RT#58554)
        - Fixed CDBICompat to preserve order of column-group additions,
          so that test relying on the order of %{} will no longer fail
        - Fixed mysterious ::Storage::DBI goto-shim failures on older
          perl versions
        - Non-blessed reference exceptions are now correctly preserved
          when thrown from udner DBIC (e.g. from txn_do)
        - No longer disconnecting database handles supplied to connect
          via a coderef
        - Fixed t/inflate/datetime_pg.t failures due to a low dependency
          on DateTime::Format::Pg (RT#61503)
        - Fix dirtyness detection on source-less objects
        - Fix incorrect limit_dialect assignment on Replicated pool members